feat: dockerize fullstack app with cookie auth and updated docs